test_suite/tests/errors/machine_attr_passed_args.rs
use banish::banish;

#[banish::machine("arg")]
fn main() {
    banish!{}
}