test_suite/tests/errors/machine_attr_passed_args.stderr
error: #[banish::machine] takes no arguments. Write block attributes inside the `banish! { }` block with `#![...]`
 --> tests/errors/machine_attr_passed_args.rs:3:1
  |
3 | #[banish::machine("arg")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `banish::machine` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `banish::banish`
 --> tests/errors/machine_attr_passed_args.rs:1:5
  |
1 | use banish::banish;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/errors/machine_attr_passed_args.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/errors/machine_attr_passed_args.rs`
